--- a/style.css
+++ b/style.css
@@ -84,12 +84,15 @@ input[type=login]:focus {
 }
 
 #ilogin {
-    margin-left: 40px;
+    margin-left: 45px;
+    font-size: 12px;
+    color: red;
 }
 
 section.password {
     width: 240px;
     height: 70px;
+    padding-left: 30px;
     background-color: rgba(0, 0, 0, 0);
     display: flex;
 }
@@ -118,8 +121,10 @@ input[type=password]:focus {
     border-bottom: 1px solid rgba(255, 208, 0, 0.767);
 }
 
-#password {
-    margin-left: 40px;
+#ipassword {
+    margin-left: 45px;
+    font-size: 12px;
+    color: red;
 }
 
 .icon-asterisk {
